Techniques list looks, add filtering

--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -1,6 +1,6 @@
 :root {
     --text-primary: #fbf1c7;
-    --bg-primary: #3c3836;
+    --bg-primary: #282828;
     --bg-link-hover: #fbf1c7;
     --text-link-hover: #689d6a;
     --text-secondary: #d79921;
